--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -87,10 +87,12 @@ jobs:
 #        ssh -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} 'cd /home/ec2-user/ && (sudo docker stop $CONTAINER_NAME-name || true) && (sudo docker rm $CONTAINER_NAME-name  || true) && sudo docker rmi $IMAGE_NAME && sudo docker build -t $IMAGE_NAME . && sudo docker run -it --name $CONTAINER_NAME-name -d $IMAGE_NAME'
     - name: Docker build and restart
       run: |
-        ssh -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} '
-        sudo docker stop ${{ env.CONTAINER_NAME }} || true
-        sudo docker rm ${{ env.CONTAINER_NAME }}  || true
-        sudo docker rmi ${{ env.IMAGE_NAME }} || true
+        ssh -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} "
+        CONTAINER_NAME=${{ env.CONTAINER_NAME }} IMAGE_NAME=${{ env.IMAGE_NAME }} WORKING_DIR=${{ env.WORKING_DIR }} bash -s" << 'EOF'
+        sudo docker stop $CONTAINER_NAME || true
+        sudo docker rm $CONTAINER_NAME || true
+        sudo docker rmi $IMAGE_NAME || true
         cd $WORKING_DIR
-        sudo docker build -t ${{ env.IMAGE_NAME }} .
-        sudo docker run -it --name ${{ env.CONTAINER_NAME }} -d ${{ env.IMAGE_NAME }}'
+        sudo docker build -t $IMAGE_NAME .
+        sudo docker run -it --name $CONTAINER_NAME -d $IMAGE_NAME
+    EOF
