--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -91,6 +91,6 @@ jobs:
         sudo docker stop ${{ env.CONTAINER_NAME }} || true
         sudo docker rm ${{ env.CONTAINER_NAME }}  || true
         sudo docker rmi ${{ env.IMAGE_NAME }} || true
-        cd ${{ WORKING_DIR }}
+        cd ${{ env.WORKING_DIR }}
         sudo docker build -t ${{ env.IMAGE_NAME }} .
         sudo docker run -it --name ${{ env.CONTAINER_NAME }} -d ${{ env.IMAGE_NAME }}'
